{
  "@@locale": "en",
  "appTitle": "Fitness App",
  "noRouteFound": "No Route Found",
  "titleRoutine": "Home",
  "titleWalk": "Purposed Walks",
  "titleAppointment": "Appointments",
  "titleWalkMedia": "Walk Media",
  "titleLiveTraining": "Live Trainings",
  "title": "Title",
  "content": "Content",
  "imageUrl": "Image URL",
  "register": "Register",
  "updateUser": "Update",
  "addAppointment": "Add Appointment",
  "addLiveTraining": "Add Live Training",
  "addRoutine": "Add Routine",
  "updateRoutine": "Update Routine",
  "addWalk": "Add Walk",
  "updateWalk": "Update Walk",
  "addWalkMedia": "Add Walk Media",
  "updateWalkMedia": "Update Walk Media",
  "routineDetails": "Routine Details",
  "error": "Error",
  "edit": "Edit",
  "delete": "Delete",
  "editPost": "Edit Post",
  "cancel": "Cancel",
  "save": "Save",
  "walk": "Walk",
  "pickGallery": "Pick Gallery",
  "camera": "Camera",
  "serverFailure": "Server Failure",
  "cacheFailure": "Cache Failure",
  "loginFailure": "Invalid Username or Password",
  "invalidInputFailure": "Invalid Input - The number must be a positive integer.",
  "onboardingTitle1": "FITNESS CONTENT",
  "onboardingTitle2": "LIVE TRAINING",
  "onboardingTitle3": "APPOINTMENT",
  "onboardingTitle4": "WALK FEATURE",
  "onboardingSubtitle1": "The app provides pre-loaded fitness routines",
  "onboardingSubtitle2": "Users can join real-time workout sessions led by either group trainers or book individual trainers",
  "onboardingSubtitle3": "A calendar feature for users to schedule one-on-one sessions with personal trainers",
  "onboardingSubtitle4": "Users can design routes on a map, set times, and starting points. Others can view and express interest in joining",
  "skip": "Skip"
}
