...
                          border: OutlineInputBorder(
                            borderSide: BorderSide.none,
                            borderRadius: BorderRadius.circular(10),
                          ),
                          fillColor: ColorManager.redWhite,
                          filled: true,
                          hintText: 'Routine Name',
                          enabledBorder: OutlineInputBorder(
                            borderSide:
                                const BorderSide(color: ColorManager.blueGrey),
                            borderRadius: BorderRadius.circular(AppRadius.r10),
                          ),
                          focusedBorder: OutlineInputBorder(
...
                        ),
                      ),
                      SizedBox(
                        height: AppHeight.h10,
                      ),
                      Text(
                        "Description",
                        style: getBoldStyle(
                          fontSize: FontSize.s15,
                          color: ColorManager.primary,
                        ),
                      ),
                      SizedBox(
...
                        ),
                      ),
                      SizedBox(
                        height: AppHeight.h10,
                      ),
                      Text(
                        "Difficulty",
                        style: getBoldStyle(
                          fontSize: FontSize.s15,
                          color: ColorManager.primary,
                        ),
                      ),
                      SizedBox(
...
                        ),
                      ),
                      SizedBox(
                        height: AppHeight.h10,
                      ),
                      Text(
                        "Source",
                        style: getBoldStyle(
                          fontSize: FontSize.s15,
                          color: ColorManager.primary,
                        ),
                      ),
                      SizedBox(
...
