...
                      const SizedBox.shrink(),
                      SizedBox(
                        height: AppHeight.h10,
                      ),
                      ListTile(
                        contentPadding: EdgeInsets.zero,
                        title: const Text('Duration (minutes)'),
                        subtitle: Text(
                          durationController.text.trim().isEmpty
                              ? 'Add duration'
                              : durationController.text.trim(),
                        ),
                        onTap: () async {
...
